[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
regex = "1.11.1"
itertools = "0.13.0"
rand = "0.8.5"
num-bigint = { version = "0.4.6", features = ["rand"] }
typed-index-collections = "3.2.3"
derive_more = { version = "1.0.0", features = ["full"]}
pheap = "0.3.0"
num-traits = "0.2.19"
enumset = "1.1.5"
image = "0.25.5"
crossterm = "0.28.1"
petgraph = "0.6.5"
